--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <script src="app.js"></script>
   </head>
   <body>
-<p>Move mouse up and down to scale</br>
-Hold mouse to switch faces</p> 
+<p><b>Move mouse up and down to scale</br>
+Hold mouse to switch faces</br>
+Press 'S' to save your artwork</b></p> 
   </body>
 </html>
